# Study_projects

ISMED_p1_calories_calculator/: README.md  aplication.py  main.py  meal.py  menu.py  product.py
ISMED_p2_walkAnalysis/: 18krokow.csv  README.md  aplication.py  cycleDetection.py  krzywa14krokow.csv  lewakulawa.csv  lewakulawa12krokow.csv  main.py  plots.py  prawakulawa.csv  requirements.txt  rownonogi.csv  rownonogi9krokow.csv  równe12krokow.csv  test1_chodzL.csv  walkData.py
Java/PJAVA_Edytor_Obrazow/: README.md
Metody_numeryczne/P1/: MNUB_24L_P1_dane32.mat
Metody_numeryczne/P2/: MNUB_24L_P2_dane32.mat  Zad1_Zad2.m  Zad4.m
Metody_numeryczne/P3/: MNUB_24L_P3_dane32.csv
Numerical_methods/: README.md
Numerical_methods/P1/: Projekt_calosc.m  README.md
Numerical_methods/P2/: Zad3.m
Numerical_methods/P3/: Zad1_2_3.m  Zad4.m
Object-oriented_programming/: README.md
Object-oriented_programming/Programowanie_obiektowe_p1/Project_elevator/: Human.h  Human_functions.cpp  SkyScraper.h  SkyScrapper_functions.cpp  elevator.h
Object-oriented_programming/Programowanie_obiektowe_p1/build-Project_elevator-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_log  build.ninja  cmake_install.cmake
Object-oriented_programming/Programowanie_obiektowe_p2/Projekt2/: CMakeLists.txt  CleaningPlatform.cpp  CleaningPlatform.h  Elevator.cpp  Human.cpp  Human.h  Room.cpp  Room.h  SkyScraper.h  SkyScrapper.cpp  SpaceForPeople.cpp  SpaceForPeople.h  elevator.h  main.cpp
Object-oriented_programming/Programowanie_obiektowe_p2/build-Projekt2-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  (+9 more)
Object-oriented_programming/Project_3/Projekt3winda_kontener/: CMakeLists.txt  CleaningPlatform.cpp  CleaningPlatform.h  Elevator.cpp  Human.cpp  Human.h  Knot.cpp  Knot.h  Room.cpp  Room.h  SkyScraper.h  SkyScrapper.cpp  SmartBox.cpp  SmartBox.h  SpaceForPeople.cpp  SpaceForPeople.h  elevator.h  main.cpp
Programowanie obiektowe/Programowanie_obiektowe_p1/Project_elevator/: CMakeLists.txt  Elevator_functions.cpp  SkyScraper.h  main.cpp
(+236 files in other folders)
